fix for too small input

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body {
 #root {
   margin: 20px;
 }
+
+.demoAuth input {
+  font-size: 16px;
+}
